Registrar, consultar y actualizar usuario

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vitest/browser-webdriverio": "latest",
     "@vitest/ui": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -53,7 +54,9 @@
     "happy-dom": "latest",
     "input-otp": "1.4.1",
     "jsdom": "latest",
-    "lucide-react": "^0.454.0",
+    "jwt-decode": "^3.1.2",
+    "jwt-decoder": "^0.0.0",
+    "lucide-react": "^0.553.0",
     "next-themes": "latest",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
@@ -71,6 +74,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
