--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,16 @@
 # Copia este archivo a .env y configura los valores según tu ambiente
 
 # ===========================================
-# API Backend
+# API Backend - Usuarios
 # ===========================================
-# URL base del servicio de API (sin trailing slash)
-VITE_API_BASE_URL=http://localhost:7181/api
+# URL base del servicio de usuarios (sin trailing slash)
+VITE_API_BASE_URL=http://localhost:7181
+
+# ===========================================
+# API Backend - Eventos
+# ===========================================
+# URL base del servicio de eventos
+VITE_EVENTS_API_URL=http://localhost:5000
 
 # ===========================================
 # Keycloak - Autenticación OAuth2/OpenID Connect
